css/guess_dog_breed.css
#game-panel {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 1rem;
}

#image-spot {
    display: flex;
    min-width: 15rem;
    aspect-ratio: 1;
    color: white;
    font-weight: bold;
    justify-content: center;
    align-items: center;
    font-size: 2rem;
}

@media screen and (min-width: 500px) {
    #image-spot {
        min-width: 24rem;
    }
}

